<resources>
    <string name="ignore_package_limit">
        忽略包名限制（改了Gboard包名的勾上，否则忽略）
    </string>
    <string name="log_switch">Log开关</string>
    <string name="clipboard_capacity">剪切板容量，默认10</string>
    <string name="clipboard_expire_time">
        剪切板保存时间，默认3天，单位毫秒
    </string>
    <string name="apply">应用</string>
    <string name="restart_hint">"         应用之后需要重启Gboard 首次应用需要重启手机 https://github.com/chenyue404/GboardHook     "</string>
</resources>
