<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Switch
        android:id="@+id/sw0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ignore_package_limit" />

    <Switch
        android:id="@+id/swLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_switch" />

    <EditText
        android:id="@+id/et0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/clipboard_capacity"
        android:inputType="number"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/clipboard_expire_time"
        android:inputType="number"
        android:singleLine="true" />

    <Button
        android:id="@+id/bt0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply" />

    <TextView
        android:id="@+id/tvHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/restart_hint"
        android:textIsSelectable="true" />

</LinearLayout>
